<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/search_menu"
        app:title="@string/app_name"
        app:titleTextColor="@android:color/white" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="word,line,syllables,pronunciation,wordApi,urban" />

    <TextView
        android:id="@+id/word"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        tools:text="Test" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/word" />

    <TextView
        android:id="@+id/syllables"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/word"
        tools:text="[T3st]" />

    <TextView
        android:id="@+id/pronunciation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/syllables"
        tools:text="[T-e-s-t]" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/emptyView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:lottie_autoPlay="true"
        app:lottie_fileName="book_anim.json"
        app:lottie_loop="true" />

    <TextView
        android:id="@+id/urban"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/stroked_rectangle"
        android:drawableEnd="@drawable/ic_keyboard_arrow_right"
        android:padding="10dp"
        android:text="@string/urban_dictionary"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/pronunciation" />

    <TextView
        android:id="@+id/wordApi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/stroked_rectangle"
        android:drawableEnd="@drawable/ic_keyboard_arrow_right"
        android:padding="10dp"
        android:text="@string/words_api"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/urban" />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />
</androidx.constraintlayout.widget.ConstraintLayout>